--- a/css/main.less
+++ b/css/main.less
@@ -65,6 +65,7 @@ textarea {
 
 html { 
   font-size: 62.5%; /* Make 1em equal 10px */
+	overflow-x:hidden;
 } 
  
 body {
@@ -448,8 +449,13 @@ button,
 /* ==========================================================================
    Media Queries.
    ========================================================================== */
+@media only screen and (min-height: 500px) {
+		.money.top .btn {
+			display:none;
+		}
+}
 
-@media only screen and (min-width: 880px) and (min-height: 670px) {
+@media only screen and (min-width: 860px) and (min-height: 670px) {
 		.light {
 			.font-size(33);
 			padding-top:55px;
@@ -505,7 +511,7 @@ button,
 			top:auto;
 			bottom:0;
 			right:50%;
-			margin-right:-480px;
+			margin-right:-450px;
 	    width:340px;
 		}
 		
@@ -527,9 +533,6 @@ button,
 			z-index:1;
 		}
 		.scrolled .arrow {
-			display:none;
-		}
-		.money.top .btn {
 			display:none;
 		}
 		
@@ -577,6 +580,12 @@ button,
 		#note8.note {
 			left:700px;
 			top:1600px;
+		}
+}
+
+@media only screen and (min-width: 900px) and (min-height: 670px) {
+	.form {
+			margin-right:-480px;
 		}
 }
 
