--- a/css/main.less
+++ b/css/main.less
@@ -163,6 +163,7 @@ html {
 
 p, h1, h2, h3, h4, h5, h6 {
 	margin-top:0;
+	margin-bottom:0.3em;
 }
 h1, h2, h3, h4, h5, h6 {
 	.headingfont;
@@ -237,7 +238,7 @@ button,
 
 
 /* ==========================================================================
-   Targeted Styles
+   Targeted Styles - Mobile first
    ========================================================================== */
 
 .money {
@@ -278,11 +279,14 @@ button,
 }
 
 .container {
-	max-width:940px;
+	max-width:470px;
 	padding-left:10px;
 	padding-right:10px;
 	margin-left:auto;
 	margin-right:auto;
+}
+.money.bottom .container {
+	max-width:530px;
 }
 
 .content img {
@@ -449,22 +453,33 @@ button,
 /* ==========================================================================
    Media Queries.
    ========================================================================== */
+	 
 @media only screen and (min-width: 320px) and (min-height: 500px) {
 		.money.top .btn {
 			display:none;
 		}
 }
 
+/* Medium screens (portrait tablet) */
+@media only screen and (min-width: 530px) and (min-height: 670px) {
+	.form {
+		top:30px;
+		margin-bottom:30px;
+	}
+}
+
+/* Large screens */
 @media only screen and (min-width: 860px) and (min-height: 670px) {
 		.light {
 			.font-size(33);
-			padding-top:55px;
+			padding-top:30px;
 		}
 		h1 {
 			.font-size(52);
 		}
 		h2 {
 			padding-top:70px;
+			margin-bottom:0.4em;
 		}
     .money {
 			background-size:1220px auto;
@@ -502,6 +517,10 @@ button,
 			filter: none;
 		}
 		
+		.container {
+		  max-width:940px;
+		}
+		
 		.content {
 			width:460px;
 		}
@@ -512,6 +531,7 @@ button,
 			bottom:0;
 			right:50%;
 			margin-right:-430px;
+			margin-bottom:0;
 	    width:310px;
 		}
 		
@@ -587,6 +607,17 @@ button,
 	.form {
 			margin-right:-480px;
 			width:340px;
+		}
+}
+
+@media only screen and (min-width: 530px) and (min-height: 700px) {
+	.light {
+			padding-top:30px;
+		}
+}
+@media only screen and (min-width: 860px) and (min-height: 700px) {
+	.light {
+			padding-top:55px;
 		}
 }
 
