--- a/css/main.css
+++ b/css/main.css
@@ -596,17 +596,16 @@ h6 {
   font-weight: 400;
 }
 h1 {
-  margin-top: -0.4em;
   margin-bottom: 0.1em;
   line-height: 1.09;
   text-shadow: 1px 1px 0 #267f5d, 2px 2px 0 #267f5d, 3px 3px 0 #267f5d, 4px 4px 0 #267f5d;
-  font-size: 38px;
-  font-size: 3.8rem;
+  font-size: 30px;
+  font-size: 3rem;
 }
 h2 {
   padding-top: 30px;
-  font-size: 32px;
-  font-size: 3.2rem;
+  font-size: 26px;
+  font-size: 2.6rem;
 }
 h3 {
   font-size: 22px;
@@ -710,11 +709,14 @@ button,
 
   text-align: center;
   padding-top: 15px;
-  font-size: 22px;
-  font-size: 2.2rem;
+  font-size: 20px;
+  font-size: 2rem;
 }
 .ie9 .light {
   filter: none;
+}
+.light p {
+  padding-bottom: 0.2em;
 }
 .container {
   max-width: 470px;
@@ -876,6 +878,26 @@ button,
 @media only screen and (min-width: 320px) and (min-height: 500px) {
   .money.top .btn {
     display: none;
+  }
+  h1 {
+    font-size: 38px;
+    font-size: 3.8rem;
+    margin-top: -0.4em;
+  }
+  h2 {
+    font-size: 32px;
+    font-size: 3.2rem;
+  }
+  h3 {
+    font-size: 22px;
+    font-size: 2.2rem;
+  }
+  .light {
+    font-size: 22px;
+    font-size: 2.2rem;
+  }
+  .light p {
+    padding-bottom: 1em;
   }
 }
 /* Medium screens (portrait tablet) */
