--- a/css/main.less
+++ b/css/main.less
@@ -169,18 +169,17 @@ h1, h2, h3, h4, h5, h6 {
 	.headingfont;
 }
 h1 {
-	margin-top:-0.4em;
 	margin-bottom:0.1em;
 	line-height:1.09;
 	text-shadow: 1px 1px 0 @green, 
                2px 2px 0 @green,
 							 3px 3px 0 @green,
 							 4px 4px 0 @green;
-	.font-size(38);
+	.font-size(30);
 }
 h2 {
 	padding-top:30px;
-	.font-size(32);
+	.font-size(26);
 }
 h3 {
 	.font-size(22);
@@ -272,10 +271,13 @@ button,
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8abfc8', endColorstr='#c4dfe3',GradientType=0 ); /* IE6-8 */
 	text-align:center;
 	padding-top:15px;
-	.font-size(22);
+	.font-size(20);
 }
 .ie9 .light {
 	filter: none;
+}
+.light p {
+	padding-bottom:0.2em;
 }
 
 .container {
@@ -457,6 +459,22 @@ button,
 @media only screen and (min-width: 320px) and (min-height: 500px) {
 		.money.top .btn {
 			display:none;
+		}
+		h1 {
+			.font-size(38);
+			margin-top:-0.4em;
+		}
+		h2 {
+			.font-size(32);
+		}
+		h3 {
+			.font-size(22);
+		}
+		.light {
+			.font-size(22);
+		}
+		.light p {
+			padding-bottom:1em;
 		}
 }
 
