--- a/css/main.less
+++ b/css/main.less
@@ -350,6 +350,13 @@ button,
 	display:none;
 }
 
+.okfn-ribbon {
+	margin-right:30px;
+	display:none;
+}
+.okfn-ribbon a {
+	border:none;
+}
 
 /* ==========================================================================
    Helper classes
@@ -483,6 +490,9 @@ button,
 	.form {
 		top:30px;
 		margin-bottom:30px;
+	}
+	.okfn-ribbon {
+		display:block;
 	}
 }
 
