--- a/css/main.css
+++ b/css/main.css
@@ -789,6 +789,10 @@ button,
 }
 .okfn-ribbon a {
   border: none;
+  background-position: center -227px;
+}
+#okf-panel {
+  border-color: #363636;
 }
 /* ==========================================================================
    Helper classes
