--- a/css/main.less
+++ b/css/main.less
@@ -356,6 +356,10 @@ button,
 }
 .okfn-ribbon a {
 	border:none;
+	background-position:center -227px;
+}
+#okf-panel {
+	border-color:#363636;
 }
 
 /* ==========================================================================
