--- a/css/main.less
+++ b/css/main.less
@@ -301,6 +301,13 @@ button,
 .arrow {
 	display:none;
 }
+.light .btn:link,
+.light .btn:visited,
+.light .btn:hover,
+.light .btn:focus, 
+.light .btn:active {
+	border:none;
+}
 
 .container {
 	max-width:470px;
