position okf ribbon absolutely, for ie

--- a/css/main.css
+++ b/css/main.css
@@ -826,8 +826,9 @@ button,
   display: none;
 }
 .okfn-ribbon {
-  margin-right: 30px;
   display: none;
+  position: absolute;
+  right: 30px;
 }
 .okfn-ribbon a {
   border: none;
