--- a/css/main.less
+++ b/css/main.less
@@ -391,8 +391,9 @@ button,
 }
 
 .okfn-ribbon {
-	margin-right:30px;
 	display:none;
+	position:absolute;
+	right:30px;
 }
 .okfn-ribbon a {
 	border:none;
