--- a/css/main.less
+++ b/css/main.less
@@ -567,7 +567,7 @@ button,
 }
 
 /* Medium screens (portrait tablet) */
-@media only screen and (min-width: 530px) and (min-height: 670px) {
+@media only screen and (min-width: 530px) and (min-height: 620px) {
 	.form {
 		top:30px;
 		margin-bottom:30px;
@@ -578,13 +578,13 @@ button,
 }
 
 /* Large screens */
-@media only screen and (min-width: 860px) and (min-height: 670px) {
+@media only screen and (min-width: 860px) and (min-height: 620px) {
 		.light {
 			.font-size(33);
 			padding-top:30px;
 		}
 		h1 {
-			.font-size(52);
+			.font-size(48);
 		}
 		h2 {
 			padding-top:70px;
@@ -727,10 +727,16 @@ button,
 		}
 }
 
-@media only screen and (min-width: 925px) and (min-height: 670px) {
+@media only screen and (min-width: 925px) and (min-height: 620px) {
 	.form {
 			margin-right:-480px;
 			width:340px;
+		}
+}
+
+@media only screen and (min-width: 860px) and (min-height: 640px) {
+	h1 {
+			.font-size(52);
 		}
 }
 
