--- a/css/main.css
+++ b/css/main.css
@@ -1128,6 +1128,9 @@ button,
     column-rule-style: solid;
     column-rule-width: 1px;
   }
+  .footer .supportors li {
+    display: inline-block;
+  }
   .no-csscolumns .footer .supportors h6,
   .no-csscolumns .footer .supportors ul,
   .no-csscolumns .footer .supportors li {
