--- a/css/main.less
+++ b/css/main.less
@@ -714,6 +714,9 @@ button,
 		.footer .supportors {
 			.columns;
 		}
+		.footer .supportors li {
+			display:inline-block;
+		}
 		.no-csscolumns .footer .supportors h6,
 		.no-csscolumns .footer .supportors ul,
 		.no-csscolumns .footer .supportors li {
