--- a/css/main.less
+++ b/css/main.less
@@ -581,7 +581,7 @@ button,
 @media only screen and (min-width: 860px) and (min-height: 620px) {
 		.light {
 			.font-size(33);
-			padding-top:30px;
+			padding-top:20px;
 		}
 		h1 {
 			.font-size(48);
@@ -739,8 +739,11 @@ button,
 
 @media only screen and (min-width: 860px) and (min-height: 640px) {
 	h1 {
-			.font-size(52);
-		}
+		.font-size(52);
+	}
+	.light {
+		padding-top:30px;
+	}
 }
 
 @media only screen and (min-width: 530px) and (min-height: 700px) {
