--- a/css/main.less
+++ b/css/main.less
@@ -234,6 +234,7 @@ a.no-border:active {
 	border:none;	
 }
 
+input[type="text"],
 input[type="email"] {
 	border-style:solid;
 	border-width:1px;
@@ -243,12 +244,14 @@ input[type="email"] {
 	padding:10px 0;
 	margin-bottom:20px;
 }
+input[type="text"]:focus,
 input[type="email"]:focus {
 	border-color:@green;
 	text-indent:10px;
 }
 button,
-.btn {
+.btn,
+input[type="submit"] {
 	display:inline-block;
 	background-color:@darkblue;
 	border:none;
@@ -372,8 +375,22 @@ button,
 	border-bottom-color:@darkblue;
 }
 
-.form button {
+.form button,
+.form input[type="submit"] {
 	background-color:@green;
+}
+
+.form fieldset.left,
+.form fieldset.right {
+	float:left;
+	width:50%;
+  .box-sizing;
+}
+.form fieldset.left {
+	padding-right:10px;
+}
+.form fieldset.right {
+	padding-left:10px;
 }
 
 .footer {
@@ -543,7 +560,11 @@ button,
 /* ==========================================================================
    Media Queries.
    ========================================================================== */
-	 
+@media only screen {
+	.js form label {
+		display:none;
+	}
+}
 @media only screen and (min-width: 320px) and (min-height: 500px) {
 		.money.top .btn {
 			display:none;
@@ -834,4 +855,17 @@ button,
     h3 {
         page-break-after: avoid;
     }
+		
+		::-webkit-input-placeholder { /* WebKit browsers */
+				color: transparent;
+		}
+		:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+				color: transparent;
+		}
+		::-moz-placeholder { /* Mozilla Firefox 19+ */
+				color: transparent;
+		}
+		:-ms-input-placeholder { /* Internet Explorer 10+ */
+				color: transparent;
+		}
 }
