--- a/css/main.less
+++ b/css/main.less
@@ -736,7 +736,7 @@ input[type="submit"] {
 			.columns;
 		}
 		.footer .supportors li {
-			display:inline-block;
+			display:block;
 		}
 		.no-csscolumns .footer .supportors h6,
 		.no-csscolumns .footer .supportors ul,
