supporter columns li inline-block 100% wide

--- a/css/main.css
+++ b/css/main.css
@@ -1153,7 +1153,8 @@ input[type="submit"] {
     column-rule-width: 1px;
   }
   .footer .supportors li {
-    display: block;
+    display: inline-block;
+    width: 100%;
   }
   .no-csscolumns .footer .supportors h6,
   .no-csscolumns .footer .supportors ul,
