small screen form layout

--- a/css/main.less
+++ b/css/main.less
@@ -380,17 +380,8 @@ input[type="submit"] {
 	background-color:@green;
 }
 
-.form fieldset.left,
-.form fieldset.right {
-	float:left;
-	width:50%;
-  .box-sizing;
-}
-.form fieldset.left {
-	padding-right:10px;
-}
-.form fieldset.right {
-	padding-left:10px;
+.form label {
+	font-size:13px;
 }
 
 .footer {
@@ -592,6 +583,18 @@ input[type="submit"] {
 	.form {
 		top:30px;
 		margin-bottom:30px;
+	}	
+	.form fieldset.left,
+	.form fieldset.right {
+		float:left;
+		width:50%;
+		.box-sizing;
+	}
+	.form fieldset.left {
+		padding-right:10px;
+	}
+	.form fieldset.right {
+		padding-left:10px;
 	}
 	.okfn-ribbon {
 		display:block;
