--- a/css/main.less
+++ b/css/main.less
@@ -447,6 +447,16 @@ input[type="submit"] {
 	border-color:#363636;
 }
 
+.redirect {
+	display:none;
+	text-align:center;
+	padding:5px;
+}
+
+.signed .redirect {
+	display:block;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
