--- a/css/main.less
+++ b/css/main.less
@@ -13,6 +13,7 @@
 @darkblue: #2c3136;
 @green: #267f5d;
 @white: #FFF;
+@black: #000;
 
 @headingfont: Bevan, "Rockwell Extra Bold", "Rockwell Bold", monospace;
 
@@ -66,6 +67,13 @@
   column-rule-color: @columnRuleColor;
   column-rule-style: @columnRuleStyle;
   column-rule-width: @columnRuleWidth;
+}
+
+.transition(@duration:0.2s, @ease:ease-out) {
+  -webkit-transition: all @duration @ease;
+  -moz-transition: all @duration @ease;
+  -o-transition: all @duration @ease;
+  transition: all @duration @ease;
 }
 
 
@@ -183,7 +191,7 @@ p, h1, h2, h3, h4, h5, h6 {
 	margin-top:0;
 	margin-bottom:0.3em;
 }
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, .heading {
 	.headingfont;
 }
 h1 {
@@ -449,13 +457,58 @@ input[type="submit"] {
 
 .redirect {
 	display:none;
-	text-align:center;
-	padding:5px;
 }
-
 .signed .redirect {
 	display:block;
+	position:fixed;
+	top:0;
+	right:0;
+	bottom:0;
+	left:0;
+	background-color: fade(@black, 70%);
+	z-index:1;
 }
+.redirect .thanks {
+	text-align:center;
+	max-width:470px;
+	margin-left:auto;
+	margin-right:auto;
+	background-color:@white;
+	color:@darkblue;
+	padding:30px;
+	.drop-shadow;
+	position:relative;
+}
+.redirect .thanks a:link,
+.redirect .thanks a:visited,
+.redirect .thanks a:hover,
+.redirect .thanks a:focus, 
+.redirect .thanks a:active {
+	color: @darkblue;
+	border-bottom-color:@darkblue;
+}
+.redirect .heading {
+	display:block;
+	.font-size(22);
+}
+.redirect .thanks .close,
+.redirect .thanks .close:link,
+.redirect .thanks .close:visited,
+.redirect .thanks .close:hover,
+.redirect .thanks .close:focus, 
+.redirect .thanks .close:active {
+	position:absolute;
+	top:10px;
+	right:10px;
+	border:none;
+	background-color:@darkblue;
+	display:block;
+	width:20px;
+	height:20px;
+	color:@white;
+	line-height:20px;
+}
+
 
 /* ==========================================================================
    Helper classes
@@ -585,6 +638,10 @@ input[type="submit"] {
 		}
 		.light p {
 			padding-bottom:1em;
+		}
+		.signed .redirect {
+			padding-top:100px;
+			.transition;
 		}
 }
 
