--- a/css/main.less
+++ b/css/main.less
@@ -442,6 +442,17 @@ input[type="submit"] {
 	display:none;
 }
 
+.footer .okf-footer {
+	margin-top:20px;
+	border-top:solid 1px fade(@white, 30%);
+}
+.footer .okf-footer .container {
+  padding: 0;
+}
+.footer .okf-footer .container ul {
+	padding:0;
+}
+
 .okfn-ribbon {
 	display:none;
 	position:absolute;
