--- a/css/main.css
+++ b/css/main.css
@@ -642,19 +642,26 @@ a.no-border:active {
   border: none;
 }
 input[type="text"],
+input[type="email"],
+select,
+textarea {
+  width: 100%;
+  -ms-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+input[type="text"],
 input[type="email"] {
   border-style: solid;
   border-width: 1px;
-  border-color: #ffffff;
-  border-bottom-color: #267f5d;
-  width: 100%;
-  padding: 10px 0;
+  border-color: #A6A6A6;
   margin-bottom: 20px;
+  padding: 10px;
 }
 input[type="text"]:focus,
 input[type="email"]:focus {
   border-color: #267f5d;
-  text-indent: 10px;
 }
 button,
 .btn,
@@ -776,9 +783,19 @@ input[type="submit"] {
   max-width: 100%;
   margin-bottom: 1em;
 }
-.form {
+.white-box {
   background-color: #ffffff;
   color: #2c3136;
+}
+.white-box a:link,
+.white-box a:visited,
+.white-box a:hover,
+.white-box a:focus,
+.white-box a:active {
+  color: #2c3136;
+  border-bottom-color: #2c3136;
+}
+.form {
   position: relative;
   top: 10px;
   padding: 30px;
@@ -787,13 +804,16 @@ input[type="submit"] {
   -moz-box-shadow: 2px 2px 0 4px rgba(0, 0, 0, 0.15);
   box-shadow: 2px 2px 0 4px rgba(0, 0, 0, 0.15);
 }
-.form a:link,
-.form a:visited,
-.form a:hover,
-.form a:focus,
-.form a:active {
-  color: #2c3136;
-  border-bottom-color: #2c3136;
+.form input[type="text"],
+.form input[type="email"] {
+  border-color: #ffffff;
+  border-bottom-color: #267f5d;
+  padding: 10px 0;
+}
+.form input[type="text"]:focus,
+.form input[type="email"]:focus {
+  border-color: #267f5d;
+  text-indent: 10px;
 }
 .form button,
 .form input[type="submit"] {
@@ -873,11 +893,8 @@ input[type="submit"] {
 #okf-panel {
   border-color: #363636;
 }
-.redirect {
+.modal {
   display: none;
-}
-.signed .redirect {
-  display: block;
   position: fixed;
   top: 0;
   right: 0;
@@ -886,7 +903,7 @@ input[type="submit"] {
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 1;
 }
-.redirect .thanks {
+.modal .modal-content {
   text-align: center;
   max-width: 470px;
   margin-left: auto;
@@ -899,25 +916,25 @@ input[type="submit"] {
   box-shadow: 2px 2px 0 4px rgba(0, 0, 0, 0.15);
   position: relative;
 }
-.redirect .thanks a:link,
-.redirect .thanks a:visited,
-.redirect .thanks a:hover,
-.redirect .thanks a:focus,
-.redirect .thanks a:active {
+.modal .modal-content a:link,
+.modal .modal-content a:visited,
+.modal .modal-content a:hover,
+.modal .modal-content a:focus,
+.modal .modal-content a:active {
   color: #2c3136;
   border-bottom-color: #2c3136;
 }
-.redirect .heading {
+.modal .modal-content .heading {
   display: block;
   font-size: 22px;
   font-size: 2.2rem;
 }
-.redirect .thanks .close,
-.redirect .thanks .close:link,
-.redirect .thanks .close:visited,
-.redirect .thanks .close:hover,
-.redirect .thanks .close:focus,
-.redirect .thanks .close:active {
+.modal .modal-content .close,
+.modal .modal-content .close:link,
+.modal .modal-content .close:visited,
+.modal .modal-content .close:hover,
+.modal .modal-content .close:focus,
+.modal .modal-content .close:active {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -928,8 +945,9 @@ input[type="submit"] {
   height: 20px;
   color: #ffffff;
   line-height: 20px;
+  text-align: center;
 }
-.redirect .thanks .share {
+.modal .modal-content .share {
   margin-top: 10px;
 }
 .twitter-btn,
@@ -938,11 +956,11 @@ a.twitter-btn:visited,
 a.twitter-btn:hover,
 a.twitter-btn:focus,
 a.twitter-btn:active,
-.redirect .thanks a.twitter-btn:link,
-.redirect .thanks a.twitter-btn:visited,
-.redirect .thanks a.twitter-btn:hover,
-.redirect .thanks a.twitter-btn:focus,
-.redirect .thanks a.twitter-btn:active {
+.modal .modal-content a.twitter-btn:link,
+.modal .modal-content a.twitter-btn:visited,
+.modal .modal-content a.twitter-btn:hover,
+.modal .modal-content a.twitter-btn:focus,
+.modal .modal-content a.twitter-btn:active {
   display: inline-block;
   background-color: #3399dd;
   -webkit-border-radius: 2px;
@@ -961,10 +979,81 @@ a.twitter-btn:active,
 a.twitter-btn:hover,
 a.twitter-btn:focus,
 a.twitter-btn:active,
-.redirect .thanks a.twitter-btn:hover,
-.redirect .thanks a.twitter-btn:focus,
-.redirect .thanks a.twitter-btn:active {
+.modal .modal-content a.twitter-btn:hover,
+.modal .modal-content a.twitter-btn:focus,
+.modal .modal-content a.twitter-btn:active {
   background-color: #49a4e1;
+}
+.involved,
+.signed {
+  overflow: hidden;
+}
+.signed .modal.redirect,
+.involved .modal.get-involved {
+  display: block;
+  overflow: auto;
+}
+/*
+ * Get Involved
+ */
+.modal.get-involved .modal-content,
+#getinvolved {
+  text-align: left;
+}
+.required-message {
+  display: none;
+}
+.ss-q-title {
+  font-weight: bold;
+}
+.ss-choices {
+  padding-left: 0;
+}
+.ss-choice-item {
+  display: block;
+}
+.modal-content label {
+  margin-top: 6px;
+  display: block;
+}
+.modal-content input[type="text"],
+.modal-content input[type="email"],
+.modal-content select,
+.modal-content textarea {
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+.get-involved-page {
+  background-color: #8abfc8;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #8abfc8 0%, #c4dfe3 100%);
+  /* FF3.6+ */
+
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #8abfc8), color-stop(100%, #c4dfe3));
+  /* Chrome,Safari4+ */
+
+  background: -webkit-linear-gradient(top, #8abfc8 0%, #c4dfe3 100%);
+  /* Chrome10+,Safari5.1+ */
+
+  background: -o-linear-gradient(top, #8abfc8 0%, #c4dfe3 100%);
+  /* Opera 11.10+ */
+
+  background: -ms-linear-gradient(top, #8abfc8 0%, #c4dfe3 100%);
+  /* IE10+ */
+
+  background: linear-gradient(to bottom, #8abfc8 0%, #c4dfe3 100%);
+  /* W3C */
+
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8abfc8', endColorstr='#c4dfe3', GradientType=0);
+  /* IE6-8 */
+
+}
+.get-involved-page .white-box {
+  padding: 20px;
+  max-width: 600px;
+}
+.get-involved-page h2 {
+  padding-top: 20px;
 }
 /* ==========================================================================
    Helper classes
@@ -1059,7 +1148,7 @@ a.twitter-btn:active,
    Media Queries.
    ========================================================================== */
 @media only screen {
-  .js form label {
+  .js .form label {
     display: none;
   }
 }
@@ -1087,8 +1176,8 @@ a.twitter-btn:active,
   .light p {
     padding-bottom: 1em;
   }
-  .signed .redirect {
-    padding-top: 100px;
+  .modal .modal-content {
+    margin-top: 100px;
     -webkit-transition: all 0.2s ease-out;
     -moz-transition: all 0.2s ease-out;
     -o-transition: all 0.2s ease-out;
