--- a/css/main.less
+++ b/css/main.less
@@ -525,6 +525,7 @@ input[type="submit"] {
 .modal .modal-content .heading {
 	display:block;
 	.font-size(22);
+	margin-bottom:15px;
 }
 .modal .modal-content .close,
 .modal .modal-content .close:link,
